added linearized PDF

--- a/src/app/inbox/containers/inbox/inbox.component.html
+++ b/src/app/inbox/containers/inbox/inbox.component.html
@@ -2,5 +2,5 @@
 <div class="container">
   <span>Navigate to <a routerLink="/document/1">Document 1</a></span>
   <span>Navigate to <a routerLink="/document/2">Document 2</a></span>
-  <span>Navigate to <a routerLink="/document/3">Document 3</a></span>
+  <span>Navigate to <a routerLink="/document/3">Document 3 (Optimized PDF)</a></span>
 </div>
